path given to image

--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
 </head>
 <body>
     <div class="container">
-        <img src="necklace.jpg" alt="Diamond Necklace">
+        <img src="image/necklace.jpg" alt="Diamond Necklace">
         <h1 class="product-name">Diamond Necklace</h1>
         <div class="price-container">
             <span class="price">Price ₹400/-</span>
         </div>
         <div class="img-container">
-            <img src="minus.png" class="btn-quantity" alt="Minus" height="40px" onclick="decrease()" id="minus">
+            <img src="image/minus.png" class="btn-quantity" alt="Minus" height="40px" onclick="decrease()" id="minus">
             <span class="quantity" id="quantitytext">1</span>
-            <img src="plus.png" class="btn-quantity" alt="Plus" height="40px" onclick="increase()" id="plus">
+            <img src="image/plus.png" class="btn-quantity" alt="Plus" height="40px" onclick="increase()" id="plus">
         </div>
         <button class="btn">Add to cart</button>
     </div>
