--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         .container {
             border: 1px solid black;
             width: 400px;
-            height: 650px;
+            height: 750px;
             margin: 20px auto;
             padding: 15px;
             text-align: center;
@@ -87,19 +87,22 @@
         .btn:hover {
             background-color: #218838;
         }
+        .image{
+            height:200px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="image/necklace.jpg" alt="Diamond Necklace">
+        <img src="necklace.jpg" alt="Diamond Necklace"class="image">
         <h1 class="product-name">Diamond Necklace</h1>
         <div class="price-container">
             <span class="price">Price ₹400/-</span>
         </div>
         <div class="img-container">
-            <img src="image/minus.png" class="btn-quantity" alt="Minus" height="40px" onclick="decrease()" id="minus">
+            <img src="minus.png" class="btn-quantity" alt="Minus" height="40px" onclick="decrease()" id="minus">
             <span class="quantity" id="quantitytext">1</span>
-            <img src="image/plus.png" class="btn-quantity" alt="Plus" height="40px" onclick="increase()" id="plus">
+            <img src="plus.png" class="btn-quantity" alt="Plus" height="40px" onclick="increase()" id="plus">
         </div>
         <button class="btn">Add to cart</button>
     </div>
